frontend_tests/negative/unresolved_import/cmd/app/main.go
package main

import _ "github.com/example/missing"

func main() {}
